# test_iss

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
common/: non_copyable.hpp
receive/impl/: cyclic_receiver.cpp  cyclic_receiver.hpp  dummy_callback.hpp  text_and_binary_packet_receiver.cpp  text_and_binary_packet_receiver.hpp
receive/include/: icallback.hpp  ireceiver.hpp  packet_building_receiver.hpp
send/impl/: binary_packet_factory.cpp  binary_packet_factory.hpp  packet_async_sender.cpp  packet_async_sender.hpp  packet_generator.cpp  packet_generator.hpp  packet_impl.cpp  packet_impl.hpp  text_packet_factory.cpp  text_packet_factory.hpp
send/include/: packet.hpp  packet_factory.hpp
